# WEB-AUDIT

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: __init__.py  asgi.py  celery.py  errors.py  health.py  logging.py  middleware.py  settings.py  urls.py  views.py
audit_engine/: __init__.py  crawler.py  graph.py  models.py  rules.py  scoring.py  tasks.py  urls.py
deployment/: README.md  backup.sh  entrypoint.sh  railway.json  railway.production.analysis.json  railway.production.json  railway.production.render.json  railway.production.scheduler.json  railway.staging.analysis.json  railway.staging.json  railway.staging.render.json  railway.staging.scheduler.json  restore_test.sh
docs/: API.md  ARCHITECTURE.md  DATA_DICTIONARY.md  KAKAWA_ACCEPTANCE.md  Kakawa_Live_System_Test_2026-07-16.md  OPERATIONS.md  RECOVERY.md  SECURITY.md  THREAT_MODEL.md
exporters/: __init__.py  brand.py  build_deck.mjs  build_v18_workbooks.mjs  build_workbooks.mjs  common.py  docx_reports.py  html_outputs.py  manifest.py  markdown_summary.py  package_builder.py  paths.py  pdf_reports.py  pptx_deck.py  run_data.py  run_package.py  tasks.py  v18_compatible.py  v18_workbook_specs.py  xlsx_workbooks.py
exports/: v19-verification-result.json
fixtures/: build_kakawa_snapshot.py
generation/: __init__.py  openai_boundary.py  package_prompts.py  quality.py  schemas.py
integrations/: __init__.py  base.py  demo_market.py  import_service.py  market_data.py  semrush.py  semrush_reports.py  semrush_status.py  sources.py  tasks.py  uploads.py
scripts/: build_kakawa_package.py  build_v18_compatible_package.py  compile_kakawa_acceptance_data.py  render_verify.py  ui_visual_smoke.py  verify_package.py
templates/: 403.html  404.html  500.html  base.html  error.html
tests/: test_api_backend.py  test_artifact_storage.py  test_audit_execution.py  test_audit_models_rules_crawler.py  test_audit_rules_expanded.py  test_audit_scoring_graph.py  test_audit_urls.py  test_auth_backend.py  test_demo_market.py  test_deployment_runtime.py  test_docker_context.py  test_documentation_contract.py  test_exporters_contract.py  test_generation_boundary.py  test_generation_quality.py  test_integrations_kakawa_fixture.py  test_integrations_resilience.py  test_integrations_uploads.py  test_managed_credentials.py  test_management_commands.py  test_market_data.py  test_models_backend.py  test_package_downloads.py  test_package_manifest.py  test_package_pipeline.py  (+13 more)
(+240 files in other folders)
