[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-radius-enterprise-seo-studio"
version = "1.0.0"
description = "Evidence-led enterprise SEO audit, planning, approval, and artifact production studio."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Traffic Radius" }]
dependencies = [
  "Django>=5.2,<5.3",
  "djangorestframework>=3.16,<3.17",
  "django-environ>=0.12,<0.13",
  "django-storages[s3]>=1.14,<1.15",
  "django-cors-headers>=4.7,<5",
  "django-ratelimit>=4.1,<5",
  "argon2-cffi>=23.1,<26",
  "psycopg[binary,pool]>=3.2,<3.3",
  "celery[redis]>=5.5,<5.6",
  "redis>=5.2,<6",
  "boto3>=1.37,<2",
  "cryptography>=44,<46",
  "whitenoise>=6.9,<7",
  "gunicorn>=23,<24",
  "structlog>=25.1,<26",
  "pydantic>=2.10,<3",
  "jsonschema>=4.23,<5",
  "httpx[http2]>=0.28,<0.29",
  "beautifulsoup4>=4.13,<5",
  "lxml>=5.3,<6",
  "defusedxml>=0.7,<0.8",
  "openai>=1.68,<2",
  "reportlab>=4.3,<5",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
  "openpyxl>=3.1,<4",
  "pypdf>=5.4,<6",
  "pdfplumber>=0.11,<0.12",
  "Pillow>=12.2,<13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.10,<5",
  "pytest-cov>=6,<7",
  "pytest-xdist>=3.6,<4",
  "hypothesis>=6.130,<7",
  "respx>=0.22,<0.23",
  "freezegun>=1.5,<2",
  "ruff>=0.11,<0.12",
  "mypy>=1.15,<2",
  "bandit>=1.8,<2",
  "pip-audit>=2.8,<3",
  "playwright>=1.51,<2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "audit_engine*", "integrations*", "generation*", "exporters*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: recorded external-adapter integration test",
  "security: security boundary regression test",
  "render: document and presentation rendering test",
  "deployment: deployment and recovery smoke test",
  "e2e: end-to-end browser workflow test"
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["app/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "C4", "DJ"]
ignore = ["E501", "S101"]

[tool.coverage.run]
branch = true
source = ["app", "audit_engine", "integrations", "generation", "exporters"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

